2003-12-08  Alexander Y. Yeikovich <demon@mci.net.ua> and Bradley Bell <btb@icculus.org>

	* 2d/ibitblt.c, include/maths.h, include/ogl_init.h,
	include/pstypes.h, main/game.c, main/game.h, main,
	unused/bios/ipx.c: get rid of silly ulongs

	* configure.ac, 2d/bitblt.c, 2d/linear.asm, maths/fix.asm,
	maths/vecmata.asm, texmap/tmap_inc.asm, texmap/tmap_per.asm,
	texmap/tmappent.S, texmap/tmapppro.S: enable nasm on FreeBSD,
	change relevant __linux__ macros to __ELF__

2003-11-27  Bradley Bell  <btb@icculus.org>

	* include/ogl_init.h: added proto for ogl_check_mode

	* arch/sdl/digi.c, arch/sdl/gr.c, arch/sdl/mouse.c,
	arch/win32/findfile.c, main/inferno.c, main/titles.c: Pocket PC
	fixes

2003-11-26  Bradley Bell  <btb@icculus.org>

	* libmve/decoder16.c, libmve/mve_main.c, main/newmenu.c: fix gcc
	3.3 compiler warnings

	* arch/sdl/gr.c, main/kludge.c: landscape fixes, implemented
	gr_check_mode

	* include/pstypes.h: OS X fixes

	* cfile/cfile.c, include/pstypes.h, main/inferno.c,
	main/newmenu.h: linux fixes

	* configure.ac cygconf VisualC/d2x.dsw VisualC/d2x/d2x.dsp
	VisualC/d2xgl/.cvsignore VisualC/d2xgl/d2xgl.dsp arch/ogl/gr.c
	arch/ogl/ogl.c include/d_io.h include/loadgl.h include/ogl_init.h
	include/pstypes.h include/u_mem.h main /state.c main/vers_id.h
	misc/d_io.c: added Visual C project for opengl, buncha macro fixes
	and stuff

	* arch/sdl/gr.c: fix sdl gr_update

	* 2d/font.c, VisualC/d2x/d2x.dsp, VisualCE/d2x/d2x.vcp,
	VisualCE/mveplayer/mveplayer.vcp, arch/win32/ipx_mcast4.c,
	arch/win32/ipx_udp.c, arch/win32/ipx_win.c, arch/sdl/gr.c,
	cfile/cfile.c, console/CON_console.c, include/d_io.h,
	include/error.h, include/pstypes.h, include/strutil.h,
	include/u_dpmi.h, libmve/mve_main.c, libmve/mveplay.c,
	main/cntrlcen.c, main/console.c, main/gameseq.c, main/inferno.c,
	main/movie.c, main/newdemo.c, main/newmenu.c, main/newmenu.h,
	main/playsave.c, main/songs.c, main/state.c, main/text.c,
	mem/mem.c, misc/args.c, misc/d_io.c, misc/strutil.c: Visual C,